Trying to fix some layout issues

--- a/css/style.css
+++ b/css/style.css
@@ -87,6 +87,8 @@ nav a {
   color: var(--haven-white);
   padding: 4rem 3rem;
   display: flex;
+  flex-direction: column;
+  width: 50%;
 }
 
 .shopall {
